syntax = "proto3";

import "dashql/connection.proto";
import "salesforce/hyperdb/grpc/v1/hyper_service.proto";

package dashql;


message NotebookScriptAnnotations {
    /// The table references
    repeated string table_refs = 1;
    /// The table definitions
    repeated string table_defs = 2;
    /// The restricted columns
    repeated string restricted_columns = 3;
}

message NotebookScript {
    /// The script id
    uint32 script_id = 1;
    /// The script text
    string script_text = 2;
    /// The script annotations
    NotebookScriptAnnotations annotations = 3;
}

enum NotebookOriginType {
    FILE = 0;
    LOCAL = 1;
    HTTP = 2;
}

message NotebookMetadata {
    /// The origin type
    NotebookOriginType origin_type = 1;
    /// The original file name
    string original_file_name = 2;
    /// The original http url
    string original_http_url = 3;
}

message NotebookPageScript {
    /// The script id
    uint32 script_id = 1;
    /// The title
    string title = 2;
}

message NotebookPage {
    /// The entries
    repeated NotebookPageScript scripts = 1;
}

message Notebook {
    /// The connection params (if any)
    ConnectionParams connection_params = 1;
    /// The scripts
    repeated NotebookScript scripts = 2;
    /// The notebook pages
    repeated NotebookPage notebook_pages = 3;
    /// The notebook metadata
    NotebookMetadata notebook_metadata = 4;
}
